[package]
name = "jupiter_searcher"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jupiter_searcher"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
default = []

[dependencies]
anchor-lang = "0.28"
anchor-spl = "0.28.0"
jupiter-cpi = { path = "../../deps/jupiter-cpi" }
