
[package]
name = "balancer-oracle-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "balancer-oracle-function"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
solana-client = "1.17.12"
solana-program = "1.17.12"
spl-associated-token-account = "*"
switchboard-solana = { path = "./switchboard-solana", version = "0.29.73", features = ["macros"] }
switchboard-utils = "0.9.0"
solana-sdk = "1.17.12"
solend-sdk = { path = "./sdk" }
clap = { version = "4.4.11", features = [ "derive" ] }
spl-token = "4.0.0"
bs58 = "0.4.0"
base64 = "0.21.5"
jupiter-amm-interface = ">=0.2.1"
jupiter_searcher = {path="../../programs/jupiter_searcher"}
tokio = "1"
futures = "0.3.29"
shellexpand = "3.1.0"
