[package]
name = "switchboard-solana-macros"
version = "0.2.1"
edition = "2021"
description = "Proc macros for creating Switchboard Functions on Solana"
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/solana-sdk/tree/main/rust/switchboard-solana-macros"
license = "MIT"

[lib]
name = "switchboard_solana_macros"
proc-macro = true

[features]
default = []
dotenv = ["dotenvy"]
all = ["dotenv"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
dotenvy = { version = "0.15.7", optional = true }
solana-sdk = "1.17.12"
solana-program = "1.17.12"
serde_json = "1.0.108"
bs58 = "0.5.0"
bincode = "1.3.3"

[dev-dependencies]
simple_logger = "4.2.0"
switchboard-solana = { path = "../switchboard-solana", features = ["macros"] }
tokio = "1"
